--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "langchain-anthropic>=0.3.10",
+    "langchain-mcp-adapters>=0.0.3",
+    "langgraph>=0.3.22",
+    "loguru>=0.7.3",
     "mcp>=1.6.0",
     "psycopg>=3.2.6",
     "psycopg-pool>=3.2.6",
